Narrow API error type
