# src/api/rainwave_dto.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
-#   filename:  tmp.huWQjgokOn
-#   timestamp: 2026-04-26T13:06:20+00:00
+#   filename:  tmp.zoHm9yC46R
+#   timestamp: 2026-05-13T19:31:39+00:00
 
 from pydantic import BaseModel, Field, RootModel
 from enum import StrEnum
@@ -420,6 +420,12 @@ class AlbumArt(RootModel[str | None]):
     )
 
 
+class ApiErrorKey(RootModel[str]):
+    root: str = Field(
+        ..., description='Translation key used for API error localization lookups.'
+    )
+
+
 class Artist(BaseModel):
     id: int
     name: str
@@ -533,10 +539,6 @@ class Time(RootModel[int]):
     root: int = Field(..., description='Epoch Time - seconds since Jan 1st 00:00 1970')
 
 
-class TranslationKey(RootModel[str]):
-    root: str = Field(..., description='Translation key used for localization lookups.')
-
-
 class UpdatedAlbumRating(BaseModel):
     id: int
     rating_complete: bool
@@ -580,6 +582,10 @@ class TimelineEntryType(StrEnum):
     PVPElection = 'PVPElection'
 
 
+class TranslationKey(RootModel[str]):
+    root: str = Field(..., description='Translation key used for localization lookups.')
+
+
 class Api4UserSearchPostResponse(BaseModel):
     admin_user_search_result: AdminUserSearchResult
 
@@ -604,7 +610,7 @@ class Error(BaseModel):
     code: float | None = None
     success: bool | None = None
     text: str
-    tl_key: TranslationKey
+    tl_key: ApiErrorKey
     traceback: str | None = None
 
 
