# src/api/rainwave_typeddicts.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  rainwave-openapi.json
-#   timestamp: 2026-04-26T13:06:21+00:00
+#   timestamp: 2026-05-13T19:31:40+00:00
 
 from typing import Any, Literal, NotRequired, TypedDict
 
@@ -901,6 +901,46 @@ type TranslationKey = Literal[
 ]
 
 
+type ApiErrorKey = Literal[
+    '404',
+    'admin_required',
+    'album_does_not_exist',
+    'auth_failed',
+    'auth_required',
+    'cannot_rate_now',
+    'db_error_retry',
+    'internal_error',
+    'invalid_argument',
+    'invalid_request',
+    'invalid_station_id',
+    'login_failed',
+    'login_limit',
+    'login_password_disabled',
+    'login_required',
+    'login_too_old',
+    'missing_argument',
+    'missing_station_id',
+    'password_required',
+    'perks_required',
+    'request_delete_failed',
+    'request_favorited_failed',
+    'request_unrated_failed',
+    'same_request_album',
+    'same_request_exists',
+    'search_string_too_short',
+    'server_just_started',
+    'song_does_not_exist',
+    'song_not_requested',
+    'station_offline',
+    'too_many_requests',
+    'tunein_required',
+    'tunein_to_rate_current_song',
+    'unlocked_only',
+    'user_locked',
+    'username_required',
+]
+
+
 class AlbumCore(TypedDict):
     added_on: Time
     art: str | None
@@ -941,7 +981,7 @@ class Error(TypedDict):
     code: NotRequired[float]
     success: NotRequired[bool]
     text: str
-    tl_key: TranslationKey
+    tl_key: ApiErrorKey
     traceback: NotRequired[str]
 
 
